Add more changes

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'javax.inject:javax.inject:1'
-	compile 'org.slf4j:slf4j:1.7.31'
 	compileOnly 'org.projectlombok:lombok:1.18.32'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.5'
+    //implementation 'org.springframework:spring-aspects:6.0.11'
+    compileOnly group: 'org.springframework.retry', name: 'spring-retry', version: '1.0.3.RELEASE'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
